Modifico el diseño de notebook y mobile de Desarrolladores

--- a/pages/Desarrolladores.html
+++ b/pages/Desarrolladores.html
@@ -132,19 +132,13 @@
 
             <div class="centered">Iván Caravajal</div>
           </div>
-
-          <!-- <div class="developer-card areaG">
-                    <img src="../img/nosotros/abraham-trenyan.jpg" alt="">
-
-                    <div class="centered">Abraham Trenyan</div>
-                </div> -->
         </div>
 
         <div id="group-photo-artech">
-          <img src="../img/nosotros/foto-grupal-artech.jpeg" alt="" />
+          <img src="../img/nosotros/foto-grupal-artech-r.jpeg" alt="" />
         </div>
 
-        <h3 id="other-projects">Otros proyectos</h3>
+        <h3 id="other-projects">Proyectos de otros compañeros</h3>
 
         <div class="projects">
           <div class="proyecto-mimo proyectoA">
