Integro el código restante de Nuestro Grupo

--- a/pages/NuestroGrupo.html
+++ b/pages/NuestroGrupo.html
@@ -63,13 +63,16 @@
       <div class="conteiner-cards">
         <div class="card-grupo card-grupo1">
           <div class="imgBx">
-            <img src="" alt="Homero Simpson" />
+            <img src="../img/individuales/silvina-uranga.jpg" alt="silvina uranga" />
           </div>
           <div class="content">
             <div class="details">
-              <h2 class="nombre"><br /><span></span></h2>
+              <h2 class="nombre"><br /><span>"Directora de Pescar"</span></h2>
               <div class="card_btn">
-               
+                <a class="atext1" href="https://github.com/" target="_blank"
+                  ><i class="texto">GitHub</i
+                  ><img id="imgGitHub" src="../img/cardsGrupo/github-icon.png"
+                /></a>
                 <a
                   class="atext2"
                   href="https://www.linkedin.com"
@@ -83,6 +86,8 @@
             </div>
           </div>
         </div>
+
+        <div class="directora"></div>
 
         <div class="directivos"></div>
 
