preguntas pag cv

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <div class="card__overlay">
                 <div class="card__header">
                   <div class="card__header-text">
-                    <h3 class="card__title">¿Quién es pescar?</h3>
+                    <h3 class="card__title">¿Qué es Pescar?</h3>
                   </div>
                 </div>
                 <p class="card__description">
@@ -148,8 +148,8 @@
                   Accediendo a esta beca nos esperábamos solamente clases
                   técnicas, nuestra deducción fue incompleta, fue mucho más que
                   eso. Tiene además clases de habilidades blandas, inclusión,
-                  acompañamiento continuo y el apoyo de empresas asociadas que
-                  ofrecen su espacio, en este caso también nos ofrecieron
+                  acompañamiento continuo y el apoyo de empresas que
+                  ofrecen su espaci. En nuestro caso también nos ofrecieron
                   capacitaciones internas que ayudan a construir nuestro
                   conocimiento en el área IT.
                 </p>
