Agrego redacción a Desarrolladores.html y a las experiencias

--- a/pages/Desarrolladores.html
+++ b/pages/Desarrolladores.html
@@ -68,9 +68,13 @@
           <div class="section-information">
             <h3 id="title-firstSection">Sobre nosotros</h3>
             <p class="inf-section-p">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi
-              consequuntur voluptate, accusamus est at sequi dolor, ipsa totam
-              veritatis nostrum aliquam debitis facilis quis sit?
+              Somos un equipo conformado por 6 miembros, excelentes compañeros,que a través de la beca decidieron unirse para realizar este proyecto.
+              Todos nosotros compartimos la pasión por la tecnología, la programación y este nuevo mundo que estamos descubriendo día a día.get 
+              A medida que adquirimos los conocimientos en las clases técnicas, desarrollamos la página principal, y añadimos todo paso a paso. También en las clases de formación personal se nos brindaron herramientas de organización y comunicación para realizar las tareas.
+              <br>
+              Supimos abordar nuestras diferencias, nuestras capacidades, la manera de compartir el conocimiento, como hacer llevadera la frustración y, lo más importante, que el apoyo del equipo estaba, que quién necesitara ayuda la iba a tener.
+              <br>
+              Algunos con mejores habilidades técnicas, otros con mejores habilidades blandas, o aún así, recién siendo parte de lo que es la programación, supimos cómo complementarnos y cumplir nuestros objetivos.
             </p>
           </div>
 
@@ -83,9 +87,10 @@
           <div class="section-information">
             <h3 id="title-secondSection">Más info</h3>
             <p class="inf-section-p">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet
-              quos nihil saepe aspernatur officiis. Deserunt impedit enim
-              dolorum vel facere debitis quidem animi, dignissimos itaque.
+              El proyecto fue puesto en marcha incluso antes de ser expuesto en común para el equipo, algunos de nuestros compañeros ya se encontraban orientados a desarrollar una página similar a modo de práctica, la propusieron cuando pudimos reunirnos, ya siendo los integrantes “oficiales”. Nos encantó la idea y pudimos ponernos a trabajar al instante, sería así nuestro primer proyecto en equipo, pero definitivamente no el último.
+              Como objetivo principal se pone en eje el ayudar a conocer esta oportunidad, que para nosotros representa mucho más que solo eso, sino el de un mejor o nuevo rumbo para el futuro de los jóvenes que desean formarse con Pescar.
+              <br>
+              Este proyecto, es fruto de nuestro tiempo, nuestra capacidad de aprendizaje, nuestro autoconocimiento, de llevar el día a día con personas de excelentes valores, pero en especial, está hecho con el compañerismo y el amor de un gran equipo.
             </p>
           </div>
 
