Agrego links a los proyectos, cambio imagenes e iconos y modifico sus tamaños (mobile y desktop)

--- a/pages/Desarrolladores.html
+++ b/pages/Desarrolladores.html
@@ -72,6 +72,7 @@
               Todos nosotros compartimos la pasión por la tecnología, la programación y este nuevo mundo que estamos descubriendo día a día.get 
               A medida que adquirimos los conocimientos en las clases técnicas, desarrollamos la página principal, y añadimos todo paso a paso. También en las clases de formación personal se nos brindaron herramientas de organización y comunicación para realizar las tareas.
               <br>
+              <br>
               Supimos abordar nuestras diferencias, nuestras capacidades, la manera de compartir el conocimiento, como hacer llevadera la frustración y, lo más importante, que el apoyo del equipo estaba, que quién necesitara ayuda la iba a tener.
               <br>
               Algunos con mejores habilidades técnicas, otros con mejores habilidades blandas, o aún así, recién siendo parte de lo que es la programación, supimos cómo complementarnos y cumplir nuestros objetivos.
@@ -79,7 +80,7 @@
           </div>
 
           <div class="img-section">
-            <img src="../img/fotosDelGrupo/foto-grupal1.jpg" alt="" />
+            <img src="../img/nosotros/group-coding.jpeg" alt="" />
           </div>
         </div>
 
@@ -90,12 +91,13 @@
               El proyecto fue puesto en marcha incluso antes de ser expuesto en común para el equipo, algunos de nuestros compañeros ya se encontraban orientados a desarrollar una página similar a modo de práctica, la propusieron cuando pudimos reunirnos, ya siendo los integrantes “oficiales”. Nos encantó la idea y pudimos ponernos a trabajar al instante, sería así nuestro primer proyecto en equipo, pero definitivamente no el último.
               Como objetivo principal se pone en eje el ayudar a conocer esta oportunidad, que para nosotros representa mucho más que solo eso, sino el de un mejor o nuevo rumbo para el futuro de los jóvenes que desean formarse con Pescar.
               <br>
+              <br>
               Este proyecto, es fruto de nuestro tiempo, nuestra capacidad de aprendizaje, nuestro autoconocimiento, de llevar el día a día con personas de excelentes valores, pero en especial, está hecho con el compañerismo y el amor de un gran equipo.
             </p>
           </div>
 
           <div class="img-section">
-            <img src="../img/fotosDelGrupo/foto-grupal2.jpg" alt="" />
+            <img src="../img/nosotros/group-coding1.jpeg" alt="" />
           </div>
         </div>
 
@@ -149,7 +151,7 @@
           <div class="proyecto-mimo proyectoA">
             <a
               class="projects-a"
-              href="https://www.google.com.ar/"
+              href="https://github.com/Vale-n/Proyecto-Mimo"
               target="_blank"
             >
               <div class="projects-a-title-logo">
@@ -157,7 +159,7 @@
                 <h3 id="mimo-title">Mimo</h3>
                 <img
                   id="mimo_logo"
-                  src="./logos-proyectos/logo-mimo.jpeg"
+                  src="../img/logos-proyectos/logo-mimo.jpeg"
                   alt="logo-del-proyecto-mimo"
                 />
                 <div class="second-separator"></div>
@@ -168,13 +170,13 @@
           <div class="proyecto-skinki proyectoB">
             <a
               class="projects-a"
-              href="https://www.google.com.ar/"
+              href="https://github.com/AlisonSalazarGomez/Skinki-01"
               target="_blank"
             >
               <div class="projects-a-title-logo">
                 <div class="first-separator"></div>
                 <h3 id="skinki-title">Skinki</h3>
-                <img id="skinki_logo" src="" alt="logo-del-proyecto-skinki" />
+                <img id="skinki_logo" src="../img/logos-proyectos/logo-skinki.jpeg" alt="logo-del-proyecto-skinki" />
                 <div class="second-separator"></div>
               </div>
             </a>
@@ -183,7 +185,7 @@
           <div class="proyecto-maskoteando proyectoC">
             <a
               class="projects-a"
-              href="https://www.google.com.ar/"
+              href="https://maskoteando.netlify.app/"
               target="_blank"
             >
               <div class="projects-a-title-logo">
@@ -191,7 +193,7 @@
                 <h3 id="maskoteando-title">Maskoteando</h3>
                 <img
                   id="maskoteando_logo"
-                  src=""
+                  src="../img/logos-proyectos/logo-maskoteando.jpeg"
                   alt="logo-del-proyecto-maskoteando"
                 />
                 <div class="second-separator"></div>
