Agrego el gif a Como Ingresar

--- a/pages/ComoIngresar.html
+++ b/pages/ComoIngresar.html
@@ -121,6 +121,12 @@ Free code camp.
         </div>
         </div>
 
+        <div class="ci-gif">
+
+          <img src="../img/C-1.gif" alt="">
+
+        </div>
+
 
       </div>
     </section>
